--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bare-bundle": "^1.8.4",
     "compact-encoding": "^2.16.1",
-    "localdrive": "^2.2.0"
+    "localdrive": "^2.2.0",
+    "which-runtime": "^1.3.0"
   }
 }
